--- a/HealthKitTestV1/Info.plist
+++ b/HealthKitTestV1/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>Want to access health app to read heart rate #1</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>Want to access health app to read heart rate #2</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
